fixed bug in links that was caused by z-index

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main{
   position: absolute;
   height: 92px;
   box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
-  
+  z-index: 10;
 }
 .header-overlay > .logo{
   position: absolute;
@@ -39,7 +39,6 @@ main{
   background-color: rgba(216, 73, 26, 255);
   height: 46px;
   position: relative;
-  z-index: -1;
 }
 .navbar > div{
   position: absolute;
